fix/BUGFR-936: Long search file titles are getting overlapped over the price column in PTR table

--- a/src/containers/ProductTracker/ProductTrackerTable/index.scss
+++ b/src/containers/ProductTracker/ProductTrackerTable/index.scss
@@ -1050,6 +1050,7 @@ $link-color: #349af8;
     line-height: 1em;
     text-align: left;
     width: 7.9em;
+    word-break: break-all;
   }
 }
 
